hubSide/force-app/main/default/objects/Account/fields/AdherentCategory__c.field-meta.xml
<CustomField>
    <fullName>AdherentCategory__c</fullName>
    <description>Particulier ou Société</description>
    <label>Catégorie adhérent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particulier</fullName>
            </value>
            <value>
                <fullName>Société</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>