hubSide/force-app/main/default/objects/Account/fields/Canal_de_distribution__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_distribution__c</fullName>
    <label>Canal de distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hubside.Store</fullName>
                <default>true</default>
                <label>Hubside.Store</label>
            </value>
            <value>
                <fullName>Pass&apos;location livraison à domicile</fullName>
            </value>
            <value>
                <fullName>Illipass livraison à domicile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>