hubSide/force-app/main/default/objects/Account/fields/Code_distributeur__c.field-meta.xml
<CustomField>
    <fullName>Code_distributeur__c</fullName>
    <label>Code distributeur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>