hubSide/force-app/main/default/objects/Account/fields/Code_naf__c.field-meta.xml
<CustomField>
    <fullName>Code_naf__c</fullName>
    <label>Code Naf</label>
    <length>6</length>
    <type>Text</type>
</CustomField>