hubSide/force-app/main/default/objects/Account/fields/Compte_test__c.field-meta.xml
<CustomField>
    <fullName>Compte_test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifie si le compte est utilisé seulement pour le test, et n&apos;est pas à afficher sur la community</description>
    <label>Compte de test ?</label>
    <type>Checkbox</type>
</CustomField>