hubSide/force-app/main/default/objects/Account/fields/Contrat_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Contrat_en_cours__c</fullName>
    <inlineHelpText>Indique le nombre de contrat actif</inlineHelpText>
    <label># Contrat en cours</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>