hubSide/force-app/main/default/objects/Account/fields/Date_naissance__c.field-meta.xml
<CustomField>
    <fullName>Date_naissance__c</fullName>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>