hubSide/force-app/main/default/objects/Account/fields/Email_connexion__c.field-meta.xml
<CustomField>
    <fullName>Email_connexion__c</fullName>
    <label>Email de connexion</label>
    <type>Email</type>
</CustomField>