hubSide/force-app/main/default/objects/Account/fields/Enseigne__c.field-meta.xml
<CustomField>
    <fullName>Enseigne__c</fullName>
    <inlineHelpText>Nom de l’enseigne de rattachement</inlineHelpText>
    <label>Enseigne</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFAM</fullName>
            </value>
            <value>
                <fullName>INDEP</fullName>
            </value>
            <value>
                <fullName>FNAC</fullName>
            </value>
            <value>
                <fullName>Darty</fullName>
            </value>
            <value>
                <fullName>MEDIA ONE</fullName>
            </value>
            <value>
                <fullName>DARTY FRANCHISE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>