hubSide/force-app/main/default/objects/Account/fields/Equipement_client__c.field-meta.xml
<CustomField>
    <fullName>Equipement_client__c</fullName>
    <label># Equipement client</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>