hubSide/force-app/main/default/objects/Account/fields/Id_adyen__c.field-meta.xml
<CustomField>
    <fullName>Id_adyen__c</fullName>
    <externalId>true</externalId>
    <label>Id_adyen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>