hubSide/force-app/main/default/objects/Account/fields/Id_externe__c.field-meta.xml
<CustomField>
    <fullName>Id_externe__c</fullName>
    <description>Id externe pour l&apos;intégration API</description>
    <externalId>true</externalId>
    <label>Id externe</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>