hubSide/force-app/main/default/objects/Account/fields/Magasin_central__c.field-meta.xml
<CustomField>
    <fullName>Magasin_central__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magasin central</label>
    <type>Checkbox</type>
</CustomField>