hubSide/force-app/main/default/objects/Account/fields/Mon_magasin__c.field-meta.xml
<CustomField>
    <fullName>Mon_magasin__c</fullName>
    <formula>CONTAINS($User.Distributeur_de_reference__c, Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mon magasin ?</label>
    <type>Checkbox</type>
</CustomField>