hubSide/force-app/main/default/objects/Account/fields/Niveau_retour__c.field-meta.xml
<CustomField>
    <fullName>Niveau_retour__c</fullName>
    <inlineHelpText>Permet de définir où le client peut se rendre pour un retour</inlineHelpText>
    <label>Niveau de retour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Magasin</fullName>
            </value>
            <value>
                <fullName>Enseigne</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>