hubSide/force-app/main/default/objects/Account/fields/Premier_point_vente__c.field-meta.xml
<CustomField>
    <fullName>Premier_point_vente__c</fullName>
    <label>Premier point de vente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>