hubSide/force-app/main/default/objects/Account/fields/Proprietaire_stock__c.field-meta.xml
<CustomField>
    <fullName>Proprietaire_stock__c</fullName>
    <description>Liste permettant de savoir si le distributeur possède un stock</description>
    <label>Propriétaire du stock</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non propriétaire du stock</fullName>
            </value>
            <value>
                <fullName>Propriétaire du stock</fullName>
            </value>
            <value>
                <fullName>Mixte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>