hubSide/force-app/main/default/objects/Account/fields/Qualification_client__c.field-meta.xml
<CustomField>
    <fullName>Qualification_client__c</fullName>
    <label>Qualification client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepté</fullName>
            </value>
            <value>
                <fullName>Refusé argumenté</fullName>
            </value>
            <value>
                <fullName>Refusé Non Argumenté</fullName>
            </value>
            <value>
                <fullName>Droit à l&apos;oubli</fullName>
            </value>
            <value>
                <fullName>Stop Phoning</fullName>
            </value>
            <value>
                <fullName>Répondeur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>