hubSide/force-app/main/default/objects/Account/fields/Sinistre_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Sinistre_en_cours__c</fullName>
    <inlineHelpText>Indique le nombre de sinistre en cours pour ce compte</inlineHelpText>
    <label># Sinistre en cours</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>