hubSide/force-app/main/default/objects/Account/fields/Sinistres__c.field-meta.xml
<CustomField>
    <fullName>Sinistres__c</fullName>
    <inlineHelpText>Nombre total de sinistres déclarés par ce compte</inlineHelpText>
    <label># Sinistres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>