hubSide/force-app/main/default/objects/Account/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <label>SIREN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>