hubSide/force-app/main/default/objects/Account/fields/StorePremiumEligible__c.field-meta.xml
<CustomField>
    <fullName>StorePremiumEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet de savoir si un distributeur accepte les échanges avec prime magasin</description>
    <label>Eligible prime magasin</label>
    <type>Checkbox</type>
</CustomField>