hubSide/force-app/main/default/objects/Account/fields/Type_caution__c.field-meta.xml
<CustomField>
    <fullName>Type_caution__c</fullName>
    <label>Type de caution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Magasin</fullName>
            </value>
            <value>
                <fullName>Enseigne</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>