hubSide/force-app/main/default/objects/Account/recordTypes/Distributeur.recordType-meta.xml
<RecordType>
    <fullName>Distributeur</fullName>
    <active>true</active>
    <label>Distributeur location</label>
</RecordType>