hubSide/force-app/main/default/objects/Account/validationRules/Email_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_obligatoire</fullName>
    <active>true</active>
    <description>L&apos;adresse email est obligatoire lors de la création d&apos;un client.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Client_location&quot;, 
    ISBLANK ( PersonEmail )
)</errorConditionFormula>
    <errorMessage>Merci de bien vouloir renseigner un email.</errorMessage>
</ValidationRule>