hubSide/force-app/main/default/objects/Account/validationRules/Type_de_caution.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_de_caution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Distributeur&quot;, 
    ISBLANK (TEXT(Type_caution__c ))
)</errorConditionFormula>
    <errorMessage>Merci de bien vouloir renseigner le type de caution.</errorMessage>
</ValidationRule>