hubSide/force-app/main/default/objects/Account/validationRules/VR_ACC_Email_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC_Email_Restriction</fullName>
    <active>false</active>
    <description>L&apos;adresse email est obligatoire lors de la création d&apos;un client.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Client_SFAM&quot;, 
    ISBLANK ( PersonEmail )
)</errorConditionFormula>
    <errorMessage>Merci de bien vouloir renseigner un email.</errorMessage>
</ValidationRule>