hubSide/force-app/main/default/objects/Account/validationRules/VR_ACC_SFAM_AdminUser_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC_SFAM_AdminUser_Restriction</fullName>
    <active>false</active>
    <description>Empêche toute création + modification des clients location pour le profil Admin Utilisateur</description>
    <errorConditionFormula>AND(
    OR(
        ISNEW(),
        ISCHANGED(Salutation), 
        ISCHANGED(FirstName), 
        ISCHANGED(LastName), 
        ISCHANGED(PersonEmail), 
        ISCHANGED(PersonMobilePhone),
        ISCHANGED(Date_naissance__c), 
        ISCHANGED(Type), 
        ISCHANGED(PersonMailingAddress),
        ISCHANGED(PersonMailingCity),
        ISCHANGED(PersonMailingCountry),
        ISCHANGED(PersonMailingStreet),
        ISCHANGED(PersonMailingPostalCode)
    ), 
    $Profile.Name = &quot;SFAM Admin Utilisateur&quot;
)</errorConditionFormula>
    <errorMessage>Votre profil n&apos;a pas les droits nécessaires pour cette action</errorMessage>
</ValidationRule>