hubSide/force-app/main/default/objects/Account/listViews/Client_assurance.listView-meta.xml
<ListView>
    <fullName>Client_assurance</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>Contrat_en_cours__c</columns>
    <columns>Sinistre_en_cours__c</columns>
    <columns>Id_externe__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Client_SFAM</value>
    </filters>
    <label>Client assurance</label>
</ListView>