hubSide/force-app/main/default/objects/Account/listViews/Clients_location.listView-meta.xml
<ListView>
    <fullName>Clients_location</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Client_location</value>
    </filters>
    <label>Clients location</label>
</ListView>