hubSide/force-app/main/default/objects/Account/listViews/Les_magasins.listView-meta.xml
<ListView>
    <fullName>Les_magasins</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Mon_magasin__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mon magasin</label>
</ListView>