hubSide/force-app/main/default/objects/Account/listViews/Magasins_Location.listView-meta.xml
<ListView>
    <fullName>Magasins_Location</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Distributeur</value>
    </filters>
    <filters>
        <field>Compte_test__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Nos distributeurs location</label>
</ListView>