hubSide/force-app/main/default/objects/Account/listViews/Mes_clients.listView-meta.xml
<ListView>
    <fullName>Mes_clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>vlocity_ins__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Client_location</value>
    </filters>
    <label>Mes clients</label>
</ListView>